fix panel overflow issue

--- a/src/components/GameStart/GameStart.module.scss
+++ b/src/components/GameStart/GameStart.module.scss
@@ -27,6 +27,7 @@
     flex-direction: column;
     align-items: center;
     justify-items: flex-start;
+/*     border: solid 1px yellow; */
 }
 
 
@@ -52,14 +53,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 480px;
+    height: 550px;
 }
 
 .gamePanel {
 /*     border: solid 1px blue; */
     width: 100%;
     display: flex;
-    height: 120px;
+/*     height: 150px; */
 }
 
 
