--- a/src/components/GameWon/GameWon.module.scss
+++ b/src/components/GameWon/GameWon.module.scss
@@ -52,14 +52,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 480px;
+    height: 550px;
 }
 
 .gamePanel {
 /*     border: solid 1px blue; */
     width: 100%;
     display: flex;
-    height: 120px;
+/*     height: 120px; */
 }
 
 
